fwknop-2.6.8 (11//2015):
    - [server] open/close functionality...

fwknop-2.6.7 (08/24/2015):
    - [server] When command execution is enabled with ENABLE_CMD_EXEC for an
      access.conf stanza, added support for running commands via sudo. This was
      suggested by Github user 'freegigi' (issue #159) as a means to provide
      command filtering using the powerful sudoers syntax. This feature is
      implemented by prefixing any incoming command from a valid SPA packet
      with the sudo command along with optional user and group requirements
      as defined by the following new access.conf variables:
      ENABLE_CMD_SUDO_EXEC, CMD_SUDO_EXEC_USER, and CMD_SUDO_EXEC_GROUP.
    - [server] Kevin Layer reported a bug to the fwknop mailing list that
      simultaneous NAT access for two different access.conf stanza was not
      functioning properly. After some diagnosis, this was a result of
      rule_exists() not properly detecting and differentiating existing DNAT
      rules from new ones with different port numbers when 'iptables -C'
      support is not available. This was against iptables-1.4.7, and has been
      fixed in this release of fwknop (tracked as issue #162).
    - [server] Added --key-gen to fwknopd. This feature was suggested by
      Jonathan Bennett, and will help with ease of use efforts. The first
      platform to take advantage of this will likely be OpenWRT thanks to
      Jonathan.
    - [server] By default, fwknopd will now exit if the interface that it is
      sniffing goes down (patch contributed by Github user 'sgh7'). If this
      happens, it is expected that the native process monitoring feature in
      things like systemd or upstart will restart fwknopd. However, if fwknopd
      is not being monitored by systemd, upstart, or anything else, this
      behavior can be disabled with the EXIT_AT_INTF_DOWN variable in the
      fwknopd.conf file. If disabled, fwknopd will try to recover when a